[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Chris Peterson <cdpeters1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
hvplot = "^0.8.4"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
